--- a/src/Management.Application/Management.Application.csproj
+++ b/src/Management.Application/Management.Application.csproj
@@ -7,12 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="MediatR" Version="10.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Management.Domain\Management.Domain.csproj" />
       <ProjectReference Include="..\Management.Infrastructure\Management.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Posts\Commands" />
+      <Folder Include="Posts\CommandHandlers" />
+      <Folder Include="Posts\Queries" />
+      <Folder Include="Posts\QueryHandlers" />
     </ItemGroup>
 
 </Project>
